Add node-select example

--- a/vchan/Makefile
+++ b/vchan/Makefile
@@ -5,7 +5,7 @@ CFLAGS += -g -Wall -Wextra -Werror -fPIC -O2
 LIBVCHAN_OBJS = init.o thread.o io.o
 LIBS = -pthread
 
-all: libvchan-socket.so node
+all: libvchan-socket.so node node-select
 
 $(LIBVCHAN_OBJS): libvchan.h libvchan_private.h
 
@@ -15,5 +15,8 @@ libvchan-socket.so : $(LIBVCHAN_OBJS)
 libvchan-socket.a : $(LIBVCHAN_OBJS)
 	$(AR) rcs $@ $^
 
-node: node.o  libvchan-socket.a
+node: node.o libvchan-socket.a
+	$(CC) $(LDFLAGS) $(LIBS) -o $@ $^
+
+node-select: node-select.o libvchan-socket.a
 	$(CC) $(LDFLAGS) $(LIBS) -o $@ $^
