--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 dist: bionic
 language: python
 python: '3.7'
-install:
-  - pip install --quiet -r ci/requirements.txt
-script:
-  -  ./run-tests
+install: git clone https://github.com/QubesOS/qubes-builder ~/qubes-builder
+script: ~/qubes-builder/scripts/travis-build
+env:
+ - DISTS_VM=fc29 USE_QUBES_REPO_VERSION=4.1 USE_QUBES_REPO_TESTING=1
+ - DISTS_VM=fc30 USE_QUBES_REPO_VERSION=4.1 USE_QUBES_REPO_TESTING=1
+ - DIST_DOM0=fc31 USE_QUBES_REPO_VERSION=4.1 USE_QUBES_REPO_TESTING=1
+
+jobs:
+  include:
+    - python: '3.7'
+      install: pip install --quiet -r ci/requirements.txt
+      env: TESTS_ONLY=1
+      script:
+        - ./run-tests
